# wgpu-for-bevy

./: Cargo.toml  README.md
examples/mesh-shader-landscape/: Cargo.toml
examples/mesh-shader-landscape/src/: fragment.wgsl  main.rs  mesh.wgsl  task.wgsl
examples/triangle/: Cargo.toml
examples/triangle-wesl/: Cargo.toml  triangle.md
examples/triangle-wesl/src/: main.rs  triangle.wesl
src/: depth_buffer.wgsl  lib.rs  main.rs  texture.rs
